Ended the search function and also you can save the news in a database dropped on glitch.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>RSS</title>
   </head>
   <body>
-    <form>
+    <form id="search-form">
       <input id="search-input"></input>
-      <button>Search</button>
+      <button id="search-button">Search</button>
     </form>
     <p id="news-container"></p>
   </body>
