Saved the entire list to another db and all is kind of done, without any style.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <form id="search-form">
       <input id="search-input"></input>
       <button id="search-button">Search</button>
+      <button id="save-list">Save List</button>
     </form>
     <p id="news-container"></p>
   </body>
